...
          onPressed: () => Navigator.pop(context),
        ),
        title: Text(
          widget.transactionToEdit != null
              ? 'Edit Transaksi'
              : widget.transactionDraft != null
                  ? 'Tinjau Draft Nala'
                  : 'Tambah Transaksi',
          style: TextStyle(
            fontSize: 17,
            fontWeight: FontWeight.w600,
          ),
        ),
...
                            child: _isLoading
                                ? const CircularProgressIndicator(
                                    color: Colors.white,
                                  )
                                : Text(
                                    widget.transactionDraft != null
                                        ? 'Konfirmasi & Simpan'
                                        : 'Simpan Transaksi',
                                    style: TextStyle(
                                      fontSize: 14,
                                      fontWeight: FontWeight.w600,
                                      color: Colors.white,
                                    ),
...
